<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffff"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivBattery"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:contentDescription="@string/AppName"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_battery_full" />

            <TextView
                android:id="@+id/tvBattery"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:gravity="center"
                android:text="@string/DefaultBattery"
                android:textSize="18sp"
                app:autoSizeMaxTextSize="20dp"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeTextType="uniform" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
            android:layout_weight="1.5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/value"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginEnd="12dp"
                android:gravity="end"
                android:text="@string/DefaultValue"
                android:textSize="38sp"
                app:autoSizeMaxTextSize="52dp"
                app:autoSizeMinTextSize="22sp"
                app:autoSizeTextType="uniform" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:layout_marginEnd="12dp"
                android:gravity="end"
                android:text="@string/Unit"
                android:textSize="18sp"
                app:autoSizeMaxTextSize="20dp"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeTextType="uniform" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/line" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/infoChart"
        android:layout_width="300dp"
        android:layout_height="160dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp" />

</LinearLayout>